# fastapi-azure-auth

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  lunr-index-1738937577230.json  lunr-index-1740397801870.json  lunr-index-1742293969621.json  lunr-index-1753426057733.json  pyproject.toml  search-doc-1738937577230.json  search-doc-1740397801870.json  search-doc-1742293969621.json  search-doc-1753426057733.json
.github/workflows/: codeql-analysis.yaml  coverage.yaml  publish_to_pypi.yaml  testing.yaml
assets/css/: styles.a7230748.css
assets/js/: 0e0048d6.9e6cf71a.js  0e0048d6.b657e07b.js  0e0048d6.cec35029.js  105.edc6ae25.js  17896441.d9b33e4c.js  1ad6a286.88fa4fdd.js  1ad6a286.bf544001.js  237.c14148a4.js  27.081938aa.js  4338ef83.b7370288.js  4640ce17.d0ca7c3a.js  4640ce17.e2101968.js  4b100ba1.8da519f2.js  591.58a0525f.js  5964223c.81746ff7.js  5e95c892.0b12b6b1.js  616.99b06124.js  624fcd96.0eaf2f15.js  624fcd96.39e84fba.js  670d863f.21f7d420.js  670d863f.d14333b9.js  700.b4ae2334.js  730.30d429bf.js  77c04317.3ca88c39.js  853.13206ae9.js  8641a95d.611a6903.js  8641a95d.74508f72.js  94d9bb9b.39394fd6.js  94d9bb9b.7a4ac79a.js  972d9d57.838809b3.js  9a65b867.83bc4577.js  9dcf1fd7.937df40c.js  a633a1c5.85ed333b.js  a633a1c5.a6fdc1a1.js  a7bd4aaa.b34b2c0b.js  a94703ab.d1a83897.js  b5a82c26.08bbc903.js  b5a82c26.92221b20.js  b7b10d73.dd865c7a.js  bccea385.3f1e2059.js  (+13 more)
b2c/azure_setup/: index.html
b2c/fastapi_configuration/: index.html
demo_project/: main.py
demo_project/api/: dependencies.py
demo_project/core/: config.py
demo_project/schemas/: hello_world.py
docs/: docusaurus.config.ts
docs/docs/: installation.mdx
fastapi_azure_auth/: __init__.py  auth.py  exceptions.py  openid_config.py  user.py  utils.py
installation/: index.html
multi-tenant/accept_specific_tenants_only/: index.html
multi-tenant/azure_setup/: index.html
multi-tenant/fastapi_configuration/: index.html
settings/b2c/: index.html
settings/multi_tenant/: index.html
settings/single_tenant/: index.html
single-tenant/azure_setup/: index.html
single-tenant/fastapi_configuration/: index.html
tests/: test_exception_compat.py  test_openapi_scheme.py  test_provider_config.py  test_user.py  utils.py
tests/multi_tenant/: conftest.py  test_multi_tenant.py  test_settings.py  test_websocket.py
tests/multi_tenant_b2c/: conftest.py  test_multi_tenant.py  test_settings.py
tests/single_tenant/: conftest.py  test_single_tenant.py
usage-and-faq/accessing_the_user/: index.html
usage-and-faq/admin_consent_when_logging_in/: index.html
usage-and-faq/calling_your_apis_from_python/: index.html
(+11 files in other folders)
